# repo-manual

./: CLAUDE.md  claude-best-practices.md  pyproject.toml
.repo-manual/: README.md  index.html  manual.config.json  manual.json  plan.json  structure.json
.repo-manual/index/: edges.json  files.json  symbols.json
.repo-manual/manual/overview/: overview.md
.repo-manual/manual/repo_manual/: repo_manual.cli.md  repo_manual.config.md  repo_manual.freshness.md  repo_manual.hashing.md  repo_manual.md  repo_manual.model.md  repo_manual.plan.md  repo_manual.scan.md  repo_manual.store.md  repo_manual.verify.md
.repo-manual/manual/repo_manual.scan/: repo_manual.scan.base.md  repo_manual.scan.python.md
.repo-manual/manual/systems/: cli.md  data-model.md  planning.md  scanning.md  store-freshness.md  ungrouped.md  verification.md  viewer.md
docs/: architecture.md  brainstorm.md  design-notes.md  generation-recipe.md  landscape.md  sample-orientation-manual.md
notes/chatgpt/: PROMPT.md
src/repo_manual/: __init__.py  cli.py  config.py  freshness.py  hashing.py  model.py  plan.py  store.py  verify.py  viewer.py
src/repo_manual/scan/: __init__.py  base.py  python.py
tests/: conftest.py  test_plan.py  test_python_analyzer.py  test_store_freshness.py  test_structure_and_verify.py
